--- a/assets/less/components/accordion.less
+++ b/assets/less/components/accordion.less
@@ -257,7 +257,7 @@ a.ui-button:active,
     }
 
     .messages .plusminus{
-        flex-basis: 10%;
+        //flex-basis: 10%;
         color: @yellow-color;
         position: relative;
         text-transform: uppercase;
