--- a/assets/less/pages/events.less
+++ b/assets/less/pages/events.less
@@ -331,6 +331,10 @@
                 margin-top: 2px;
 
             }
+
+            &:hover{
+                background: @yellow-color;
+            }
         }
 
         .fixed_image{
