--- a/assets/less/pages/internal-documents.less
+++ b/assets/less/pages/internal-documents.less
@@ -640,6 +640,25 @@ a:hover .arrow-left{
 .group-head h3, .mailing .col-xs-12.col-sm-8 h1{
     text-align: left;
     margin-bottom: 0;
+
+}
+
+.mailing{
+    .row:nth-of-type(1){
+        h1{
+            margin-top: 50px;
+        }
+    }
+
+    .btn-primary{
+        min-width: 130px;
+    }
+
+    form{
+        .row{
+            justify-content: left;
+        }
+    }
 }
 
 
