--- a/assets/less/pages/news.less
+++ b/assets/less/pages/news.less
@@ -65,6 +65,17 @@ nav:not(.navbar){
     .content{
         color: #40454A;
         font-size: 22px;
+        ul{
+            padding-left: 20px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            color: #6c7072;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%;
+            letter-spacing: -0.16px;
+        }
         .breakpoint-small-down({
             margin-left: 0px;
         });
