--- a/assets/less/themes/master.less
+++ b/assets/less/themes/master.less
@@ -1034,6 +1034,18 @@ footer .align-items-center{
     }
 }
 
+
+.commig_soon{
+    width: 50%;
+    margin: 200px auto;
+    font-size: 42px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.84px;
+    text-align: center;
+}
+
 //
 //#lineDrawing{
 //    path {
