--- a/partials/components/pilots_map.htm
+++ b/partials/components/pilots_map.htm
@@ -272,6 +272,11 @@
             <path class="blink" d="M389.141 498.425C397.541 498.425 404.35 505.235 404.351 513.636C404.351 522.037 397.541 528.848 389.141 528.848C380.74 528.848 373.93 522.037 373.93 513.636C373.93 505.235 380.74 498.425 389.141 498.425Z" stroke="black" stroke-opacity="0.21"/>
             <path class="blink" d="M389.141 493.591C400.211 493.591 409.186 502.566 409.186 513.637C409.185 524.707 400.211 533.682 389.141 533.682C378.07 533.682 369.096 524.707 369.096 513.637C369.096 502.566 378.07 493.591 389.141 493.591Z" stroke="black" stroke-opacity="0.06"/>
         </g>
+        <g class="fill_default" title="Baden-Württemberg Living Lab" onclick="onPilots('Baden-Württemberg Living Lab, Belgium')">
+            <ellipse class="pulse" cx="389.141" cy="513.636" rx="9.66809" ry="9.66845" fill="#422F1F"/>
+            <path class="blink" d="M389.141 498.425C397.541 498.425 404.35 505.235 404.351 513.636C404.351 522.037 397.541 528.848 389.141 528.848C380.74 528.848 373.93 522.037 373.93 513.636C373.93 505.235 380.74 498.425 389.141 498.425Z" stroke="black" stroke-opacity="0.21"/>
+            <path class="blink" d="M389.141 493.591C400.211 493.591 409.186 502.566 409.186 513.637C409.185 524.707 400.211 533.682 389.141 533.682C378.07 533.682 369.096 524.707 369.096 513.637C369.096 502.566 378.07 493.591 389.141 493.591Z" stroke="black" stroke-opacity="0.06"/>
+        </g>
         <g class="fill_default" title="South-Limburg, Geuldal Valley Living Lab" onclick="onPilots('South-Limburg, Geuldal Valley Living Lab, Netherlands')">
             <ellipse class="pulse" cx="357.72" cy="465.294" rx="9.66809" ry="9.66845" fill="#422F1F"/>
             <path class="blink" d="M357.72 450.083C366.12 450.083 372.93 456.893 372.93 465.294C372.93 473.695 366.12 480.506 357.72 480.506C349.319 480.506 342.509 473.695 342.509 465.294C342.509 456.893 349.319 450.083 357.72 450.083Z" stroke="black" stroke-opacity="0.21"/>
