--- a/partials/eventslist.htm
+++ b/partials/eventslist.htm
@@ -18,7 +18,7 @@
 
         </div>
         <div class="col-md-1 col-xs-12 read-more-events end-md center-xs">
-            <a href="{{url}}" target="_blank" class="read-more">Read more</a>
+            <a href="{{url}}" class="read-more">Read more</a>
         </div>
     </div>
     {% endfor %}
