--- a/assets/less/pages/news.less
+++ b/assets/less/pages/news.less
@@ -363,6 +363,7 @@ nav:not(.navbar){
             &.zoom_icon{
                 width: 24px;
                 height: 24px;
+                object-fit: contain;
             }
         }
 
