--- a/assets/less/pages/media.less
+++ b/assets/less/pages/media.less
@@ -425,8 +425,9 @@
     .next {
         cursor: pointer;
         position: absolute;
-        width: 100px;
+        width: 82px;
         height: 100%;
+        max-height: 60vh;
         top: 0;
         background-color: transparent;
         border-radius: 50%;
@@ -444,9 +445,8 @@
 
     .next {
         right: 0px;
-        background-image: url('../../assets/images/gallery_arrow_right.svg');
-        background-size: 24px;
-        background-position: right 23px center;
+        background: url('../../assets/images/gallery_arrow_right.svg') center no-repeat;
+        background-size: 14px;
 
         &:before{
             content: '';
@@ -454,9 +454,10 @@
             top: 0;
             left: 0;
             bottom: 0;
-            background: linear-gradient(-90deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+            background: linear-gradient(90deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.50) 100%);
             width: 100%;
             height: 100%;
+            max-height: 60vh;
             z-index: 1;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
@@ -465,18 +466,18 @@
 
     .prev {
         left: 0px;
-        background-image: url('../../assets/images/gallery_arrow_left.svg');
-        background-size: 24px;
-        background-position: left 23px center;
+        background: url('../../assets/images/gallery_arrow_left.svg') center no-repeat;
+        background-size: 14px;
         &:before{
             content: '';
             position: absolute;
             top: 0;
             left: 0;
             bottom: 0;
-            background: linear-gradient(90deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+            background: linear-gradient(-90deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.50) 100%);
             width: 100%;
             height: 100%;
+            max-height: 60vh;
             z-index: 1;
             border-top-left-radius: 15px;
             border-bottom-left-radius: 15px;
@@ -486,7 +487,9 @@
     /* On hover, add a black background color with a little bit see-through */
     .prev:hover,
     .next:hover {
-        opacity: 0.65
+        &:before{
+            opacity: 0.65;
+        }
     }
 
 }
