--- a/partials/eventslist.htm
+++ b/partials/eventslist.htm
@@ -9,7 +9,7 @@
                 <img src="{{entry.cover_image.getThumb(auto, auto, {'mode': 'crop'})}}">
             </a>
             {% endif %}
-            <a href="{{url}}" target="_blank">
+            <a href="{{url}}">
                 <div class="entry_content">
                     <div class="date_container">{{entry.start|date("j M")}}</div>
                     <div class="entry_title">{{entry.title|raw}}</div>
