--- a/assets/less/pages/library.less
+++ b/assets/less/pages/library.less
@@ -19,10 +19,10 @@
     width: 100%
 }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-}
+// .container {
+//     display: flex;
+//     flex-wrap: wrap;
+// }
 
 .library-items>.library-item {
     flex-basis: 50%;
