--- a/assets/less/components/accordion.less
+++ b/assets/less/components/accordion.less
@@ -373,6 +373,13 @@ a.ui-button:active,
         letter-spacing: -0.66px;
         .title_container{
             height: 80px;
+
+            .breakpoint-large-down({
+                height: fit-content;
+                margin-bottom: 20px;
+            });
+
+
             .number{
                 border-radius: 50%;
                 background: #B8A877;
