--- a/assets/less/components/loggedin_menu.less
+++ b/assets/less/components/loggedin_menu.less
@@ -37,13 +37,21 @@
     }
 }
 
-//.home{
-//    .navbar-loggedin-user{
-//        top: 0;
-//        z-index: 99;
-//        position: fixed;
-//    }
-//}
+.my-sent-messages,
+.internal-documents,
+.living-documents,
+.dissemination-report-forms,
+.profile,
+.users,
+.mailing{
+    .navbar-loggedin-user{
+        top: 330px;
+        z-index: 99;
+        position: absolute;
+        //position: fixed;
+        //position: relative;
+    }
+}
 
 .navbar-loggedin-user ul{
   list-style-type: none;
