--- a/assets/less/pages/contact.less
+++ b/assets/less/pages/contact.less
@@ -38,6 +38,9 @@
                 height: 312px;
                 max-width: 100%;
                 border-radius: 20px;
+                .breakpoint-large-down({
+                    object-fit: unset;
+                });
             }
 
             .uni_label{
