--- a/assets/less/pages/news.less
+++ b/assets/less/pages/news.less
@@ -577,15 +577,16 @@ nav:not(.navbar){
             &:hover {
                 cursor: none;
             }
-
-            .breakpoint-laptop-down({
-                max-width: 45vw;
-                max-height: 45vh;
-            });
+            //
+            //.breakpoint-laptop-down({
+            //    max-width: 45vw;
+            //    max-height: 45vh;
+            //});
 
             .breakpoint-large-down({
                 display: block;
                 width: 100%;
+                height: 233px;
             });
 
             .read-more-btn {
@@ -654,11 +655,11 @@ nav:not(.navbar){
             &:hover{
                 transform: scale(1.2);
             }
-
-            .breakpoint-laptop-down({
-                max-width: 45vw;
-                max-height: 45vh;
-            });
+            //
+            //.breakpoint-laptop-down({
+            //    max-width: 45vw;
+            //    max-height: 45vh;
+            //});
 
             .breakpoint-large-down({
                 width: 100%;
@@ -680,9 +681,13 @@ nav:not(.navbar){
             left: 0;
             position: absolute;
 
-            .breakpoint-laptop-down({
-                max-width: 45vw;
-                max-height: 45vh;
+            //.breakpoint-laptop-down({
+            //    max-width: 45vw;
+            //    max-height: 45vh;
+            //});
+
+            .breakpoint-large-down({
+                height: 233px;
             });
         }
 
