--- a/assets/less/components/navbar.less
+++ b/assets/less/components/navbar.less
@@ -237,6 +237,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            top: 40px;
         });
         a{
             display: flex!important;
@@ -624,7 +625,7 @@
         height: 100vh;
         margin: -40px 0 0 -93vw;
         padding: 50px 0 0 0;
-        background: #014D74;
+        background: black;
         color: @white-color!important;
         font-size: 16px!important;
         -webkit-font-smoothing: antialiased;
