--- a/assets/less/components/loggedin_menu.less
+++ b/assets/less/components/loggedin_menu.less
@@ -43,6 +43,7 @@
 .dissemination-report-forms,
 .profile,
 .users,
+.documents-search,
 .mailing{
     .navbar-loggedin-user{
         top: 330px;
@@ -50,6 +51,17 @@
         position: absolute;
         //position: fixed;
         //position: relative;
+    }
+
+    &#layout-content{
+        margin-top: 75px;
+
+    }
+
+    .header-image-bar {
+        .breakpoint-large-down({
+            height: 226px!important;
+        });
     }
 }
 
