--- a/partials/site/header.htm
+++ b/partials/site/header.htm
@@ -65,6 +65,7 @@ numberOfLevels = 2
              page_id != 'dissemination-report-forms'  and
              page_id != 'profile'  and
              page_id != 'users'  and
+             page_id != 'documents-search'  and
              page_id != 'mailing' %}
 
      {% if user %} style="margin-top: 75px;" {% endif %}
