mobile navbar fix

--- a/assets/less/components/navbar.less
+++ b/assets/less/components/navbar.less
@@ -658,15 +658,18 @@
     #menu li a{
         float: left;
         width: 100%;
+        font-size: 20px!important;
+        color: white!important;
     }
 
     #menu li:not(.social) a{
-        color: @white-color;
         padding: 15px 0;
         float: left;
         width: 100%;
-        font-size: 16px;
+        font-size: 20px!important;
         font-weight: bold;
+        margin-top: 10px!important;
+        color: white!important;
     }
 
 
@@ -683,10 +686,11 @@
     }
 
     #menu .dropdown-menu li a{
-        padding: 2px 0;
-        font-size: 14px;
+        padding: 8px 0;
+        font-size: 18px!important;
         font-weight: normal;
-        margin-top: 0px;
+        margin-top: 0px!important;
+        color: white!important;
     }
 
 
