mobile navbar fix

--- a/assets/less/components/navbar.less
+++ b/assets/less/components/navbar.less
@@ -624,7 +624,7 @@
         width: 100vw;
         height: 100vh;
         margin: -40px 0 0 -93vw;
-        padding: 50px 0 0 0;
+        //padding: 50px 0 0 0;
         background: black;
         color: @white-color!important;
         font-size: 16px!important;
@@ -686,7 +686,7 @@
     }
 
     #menu .dropdown-menu li a{
-        padding: 8px 0;
+        padding: 4px 0;
         font-size: 18px!important;
         font-weight: normal;
         margin-top: 0px!important;
